added a few layers to test

--- a/style.css
+++ b/style.css
@@ -20,11 +20,29 @@ body {
 #three-js-container {
   z-index: -1;
   display: none;
+  background: black;
 }
 #three-js-container #c {
   width: 100vw;
   height: 100vh;
   z-index: 1;
+}
+
+.temp {
+  background: black;
+  display: none;
+  color: white;
+}
+
+.row-3 {
+  color: white;
+  font-size: 2em;
+}
+
+.text-block {
+  background: rgba(0, 0, 0, 0.5);
+  border: 2px solid white;
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
