--- a/style.css
+++ b/style.css
@@ -1,48 +1,89 @@
-body {
-  margin: 0;
-  padding: 0;
+:root {
+  --scenePerspective: 1;
+  --scenePerspectiveOriginX: 50;
+  --scenePerspectiveOriginY: 30;
+  --itemZ: 2;
+  --cameraSpeed: 150;
+  --cameraZ: 0;
+  --viewportHeight: 0;
 }
 
 #overlay {
-  background: black;
+  position: fixed;
+  color: white;
   width: 100vw;
   height: 100vh;
-  color: white;
+  top: 0;
+  left: 0;
+  background: black;
   z-index: 1000;
-}
-#overlay .row {
-  height: 100%;
   display: flex;
-  align-content: center;
   justify-content: center;
+  align-items: center;
 }
 
-#three-js-container {
-  z-index: -1;
-  display: none;
+body {
   background: black;
 }
-#three-js-container #c {
-  width: 100vw;
+
+.viewport {
+  height: calc(var(--viewportHeight) * 1px);
+  display: none;
+}
+.viewport .scene3D-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  perspective: calc(var(--scenePerspective) * var(--cameraSpeed) * 1px);
+  perspective-origin: calc(var(--scenePerspectiveOriginX) * 1%) calc(var(--scenePerspectiveOriginY) * 1%);
+  will-change: perspective-origin;
+  transform: translate3d(0, 0, 0);
+}
+.viewport .scene3D-container .scene3D {
+  position: absolute;
+  top: 0;
   height: 100vh;
-  z-index: 1;
+  width: 100%;
+  transform-style: preserve-3d;
+  transform: translateZ(calc(var(--cameraZ) * 1px));
+  will-change: transform;
 }
-
-.temp {
-  background: black;
-  display: none;
+.viewport .scene3D-container .scene3D .layers {
+  background: red;
+  position: absolute;
+  display: block;
+  width: 100%;
+  top: 5%;
   color: white;
 }
-
-.row-3 {
-  color: white;
-  font-size: 2em;
+@media only screen and (min-width: 600px) {
+  .viewport .scene3D-container .scene3D .layers {
+    width: 100%;
+    height: 100vh;
+  }
+}
+.viewport .scene3D-container .scene3D .layers:nth-child(0) {
+  transform: translate3D(0, 0, calc(var(--itemZ) * var(--cameraSpeed) * 0 * -1px));
+}
+.viewport .scene3D-container .scene3D .layers:nth-child(1) {
+  transform: translate3D(0, 0, calc(var(--itemZ) * var(--cameraSpeed) * 1 * -1px));
+}
+.viewport .scene3D-container .scene3D .layers:nth-child(2) {
+  transform: translate3D(0, 0, calc(var(--itemZ) * var(--cameraSpeed) * 2 * -1px));
+}
+.viewport .scene3D-container .scene3D .layers:nth-child(3) {
+  transform: translate3D(0, 0, calc(var(--itemZ) * var(--cameraSpeed) * 3 * -1px));
 }
 
-.text-block {
-  background: rgba(0, 0, 0, 0.5);
-  border: 2px solid white;
-  color: white;
+.scene3D > div {
+  padding: 2rem;
+}
+.scene3D > div h2 {
+  margin-top: 0;
+  font-family: "Playfair Display SC", serif;
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
