--- a/style.scss
+++ b/style.scss
@@ -1,52 +1,95 @@
+:root {
+    --scenePerspective: 1;
+    --scenePerspectiveOriginX: 50;
+    --scenePerspectiveOriginY: 30;
+    --itemZ: 2;
+    --cameraSpeed: 150; // Where 1 is the fastest
+    --cameraZ: 0;
+    --viewportHeight: 0;
+  }
 
-
-body{
-    margin: 0;
-    padding: 0;
-}
-
-#overlay{
-    background: black;
-    width: 100vw;
-    height: 100vh;
-    color: white;
-    z-index: 1000;
-
-    .row{
-        height: 100%;
-        display: flex;
-        align-content: center;
-        justify-content: center;
-    }
-}
-
-#three-js-container{
-    z-index: -1;
+  #overlay{
+      position: fixed;
+      color: white;
+      width: 100vw;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      background: black;
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  // Set 3D scene
+  body{
+      background: black;
+  }
+  
+  .viewport {
+    height: calc(var(--viewportHeight) * 1px);
     display: none;
-    background: black;
-
-    #c{
-        width: 100vw;
+  
+    .scene3D-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      perspective: calc(var(--scenePerspective) * var(--cameraSpeed) * 1px);
+      perspective-origin: calc(var(--scenePerspectiveOriginX) * 1%)
+        calc(var(--scenePerspectiveOriginY) * 1%);
+      will-change: perspective-origin;
+      transform: translate3d(0, 0, 0); //Allow Hardware-Accelerated CSS
+  
+      .scene3D {
+        position: absolute;
+        top: 0;
         height: 100vh;
-        z-index: 1;
+        width: 100%;
+        transform-style: preserve-3d;
+        transform: translateZ(calc(var(--cameraZ) * 1px));
+        will-change: transform;
+  
+        .layers{
+            background: red;
+            position: absolute;
+            display: block;
+            width: 100%;
+            top: 5%;
+            color: white;          
+  
+          @media only screen and (min-width: 600px) {
+            width: 100%;
+            height: 100vh;
+          }
+
+  
+          @for $i from 0 through 3 {
+            &:nth-child(#{$i}) {
+              transform: translate3D(
+                0, 0,
+                calc(var(--itemZ) * var(--cameraSpeed) * #{$i} * -1px)
+              );
+            }
+          }
+        }
+      }
     }
+  }
+  
+  
 
-}
-
-.temp{
-    background: black;
-    display: none;
-    color: white;
-}
-.row-3{
-    color: white;
-    font-size: 2em;
-}
-
-.text-block{
-    background: rgba(0, 0, 0, 0.5);
-    border: 2px solid white;
-    color: white;
-}
-
-
+  
+  .scene3D {
+    > div {
+      padding: 2rem;
+  
+      h2 {
+        margin-top: 0;
+        font-family: "Playfair Display SC", serif;
+        font-size: 1.5rem;
+      }
+    }
+  }
